# AIPoweredMicroscope

./: .gitignore  .gitmodules  Best_SSL_Model_Selection.py  CheckTrainedModelForPretrainedModel.py  Eval_RFDETR_SOLO.py  FullImgAnnotations.json  JupyterRunCommand  LightlyTrainSSL.py  Main.py  Main_Orchestrator.py  Main_Orchestrator_UCloud.py  Main_SSL_Only_Ucloud.py  RunAltDetectors_DEIMv2_EdgeCrafter_DFINE_Ucloud.ipynb  RunBest_SSL_Model_Selection.ipynb  RunDETReg_Solo_SingleClass_STATIC_Ucloud.ipynb  RunEvaluation.ipynb  RunLightly.ipynb  RunOrchestratorOnUcloud.ipynb  RunRFDETR_Solo_SemiSupervised_STATIC_Ucloud.ipynb  RunRFDETR_Solo_SingleClass_STATIC_Ucloud.ipynb  RunRFDETR_Solo_SingleClass_Ucloud.ipynb  RunSemiDETR_SingleClass_STATIC_Ucloud.ipynb  RunSemiDETR_Solo_SingleClass_STATIC_Ucloud.ipynb  Run_SSL_Ucloud.ipynb  StarDistTest.py  StartMLflowServer.cmd  TrainRFDETR_Solo.py  TrainRFDETR_Solo_SingleClass.py  TrainRFDETR_Solo_SingleClass_Ucloud.py  Utils_MLFLOW.py  config.json  configSetting.py  init_alt_detectors_ucloud.sh  pyproject.toml  rfdetr_model_registry.py  setup_alt_detectors_ucloud.sh  viewDICOMTiles.py
DataHandling/: PatchAndSave.py  PatchMaking.py  VizCocoBbox.py  boundingBoxAdjustToPatch.py
DinoDemo/: DinoDemo.py
DinoV2Demo/: DinoV2V3InferenceDemonstration.py
Helpers/: DataLoader.py
Helpers_General/: AnnotationOverviewGenerator_Master.py  AnnotationOverviewGenerator_PrBackup.py  FOVAnnotationOverviewGenerator_Master.py  FolderSelection_input.py  FullDataSplits.py  FullDataSplitsSafe.py  LoadImages.py  PatchAndSave.py  PatchingCellScanData.py  (+4 more)
(+224 files in other folders)
