[project]
name = "aipoweredmicroscope"
version = "0.1.0"
dependencies = [
    "torch==2.0.0",
    "torchvision==0.15.0",
    "omegaconf",
    "torchmetrics==0.10.3",
    "fvcore",
    "iopath",
    "xformers==0.0.18",
    "submitit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dinov2"]